--- a/public/css/style.css
+++ b/public/css/style.css
@@ -661,12 +661,16 @@ video {
   bottom: 1rem;
 }
 
-.z-10 {
-  z-index: 10;
+.-left-1\/2 {
+  left: -50%;
 }
 
-.m-auto {
-  margin: auto;
+.-left-4 {
+  left: -1rem;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .mx-auto {
@@ -699,9 +703,9 @@ video {
   margin-right: 0.5rem;
 }
 
-.my-32 {
-  margin-top: 8rem;
-  margin-bottom: 8rem;
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 .mb-2 {
@@ -776,22 +780,6 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mb-3\.5 {
-  margin-bottom: 0.875rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .-mt-10 {
   margin-top: -2.5rem;
 }
@@ -812,12 +800,32 @@ video {
   margin-right: 1rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
+}
+
+.mt-auto {
+  margin-top: auto;
+}
+
+.mb-auto {
+  margin-bottom: auto;
+}
+
+.mb-32 {
+  margin-bottom: 8rem;
 }
 
 .block {
@@ -864,16 +872,12 @@ video {
   height: 0.25rem;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .h-\[160px\] {
   height: 160px;
 }
 
-.h-9 {
-  height: 2.25rem;
+.h-full {
+  height: 100%;
 }
 
 .h-10 {
@@ -898,6 +902,14 @@ video {
 
 .h-11 {
   height: 2.75rem;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
+.h-\[450px\] {
+  height: 450px;
 }
 
 .w-full {
@@ -926,10 +938,6 @@ video {
 
 .w-\[150px\] {
   width: 150px;
-}
-
-.w-9 {
-  width: 2.25rem;
 }
 
 .w-20 {
@@ -986,11 +994,6 @@ video {
 
 .-scale-y-100 {
   --tw-scale-y: -1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-scale-x-100 {
-  --tw-scale-x: -1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1279,14 +1282,14 @@ video {
   border-style: none;
 }
 
-.border-neutral-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(163 163 163 / var(--tw-border-opacity));
-}
-
 .border-grey-100 {
   --tw-border-opacity: 1;
   border-color: rgb(136 135 135 / var(--tw-border-opacity));
+}
+
+.border-neutral-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(163 163 163 / var(--tw-border-opacity));
 }
 
 .bg-white {
@@ -1294,24 +1297,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-green-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
-}
-
 .bg-grey-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(136 135 135 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
+.bg-brown-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(200 191 179 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -1339,14 +1332,6 @@ video {
   padding: 0px;
 }
 
-.p-10 {
-  padding: 2.5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-5 {
   padding: 1.25rem;
 }
@@ -1359,6 +1344,10 @@ video {
   padding: 0.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1367,16 +1356,6 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .py-2\.5 {
@@ -1394,6 +1373,16 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .py-14 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
@@ -1409,22 +1398,28 @@ video {
   padding-right: 0.5rem;
 }
 
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
-.py-32 {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-}
-
 .pr-4 {
   padding-right: 1rem;
 }
 
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
+.pb-44 {
+  padding-bottom: 11rem;
+}
+
+.pb-32 {
+  padding-bottom: 8rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
 }
 
 .text-center {
@@ -1441,10 +1436,6 @@ video {
 
 .font-quicksand {
   font-family: Quicksand;
-}
-
-.font-grand {
-  font-family: Grand Hotel;
 }
 
 .text-mobile {
@@ -1563,16 +1554,12 @@ video {
   --tw-placeholder-opacity: 0.1;
 }
 
-.opacity-0 {
-  opacity: 0;
-}
-
-.opacity-20 {
-  opacity: 0.2;
-}
-
 .opacity-30 {
   opacity: 0.3;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .opacity-50 {
@@ -1682,14 +1669,6 @@ video {
     margin-bottom: 1.25rem;
   }
 
-  .sm\:mt-8 {
-    margin-top: 2rem;
-  }
-
-  .sm\:mb-2 {
-    margin-bottom: 0.5rem;
-  }
-
   .sm\:-ml-10 {
     margin-left: -2.5rem;
   }
@@ -1708,6 +1687,10 @@ video {
 
   .sm\:mb-2\.5 {
     margin-bottom: 0.625rem;
+  }
+
+  .sm\:mb-2 {
+    margin-bottom: 0.5rem;
   }
 
   .sm\:mb-3\.5 {
@@ -1734,6 +1717,18 @@ video {
     height: 3rem;
   }
 
+  .sm\:h-\[450px\] {
+    height: 450px;
+  }
+
+  .sm\:h-\[650px\] {
+    height: 650px;
+  }
+
+  .sm\:h-\[750px\] {
+    height: 750px;
+  }
+
   .sm\:w-\[300px\] {
     width: 300px;
   }
@@ -1748,10 +1743,6 @@ video {
 
   .sm\:w-5\/12 {
     width: 41.666667%;
-  }
-
-  .sm\:w-6\/12 {
-    width: 50%;
   }
 
   .sm\:w-28 {
@@ -1784,17 +1775,12 @@ video {
     border-radius: 1.5rem;
   }
 
-  .sm\:p-5 {
-    padding: 1.25rem;
-  }
-
   .sm\:p-6 {
     padding: 1.5rem;
   }
 
-  .sm\:py-14 {
-    padding-top: 3.5rem;
-    padding-bottom: 3.5rem;
+  .sm\:p-5 {
+    padding: 1.25rem;
   }
 
   .sm\:py-10 {
@@ -1805,6 +1791,11 @@ video {
   .sm\:py-5 {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
+  }
+
+  .sm\:py-14 {
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
   }
 
   .sm\:pt-14 {
@@ -1838,9 +1829,9 @@ video {
     line-height: 1;
   }
 
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .sm\:text-5xl {
@@ -1863,11 +1854,6 @@ video {
     line-height: 1.75rem;
   }
 
-  .sm\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
   .sm\:leading-10 {
     line-height: 2.5rem;
   }
@@ -1878,10 +1864,6 @@ video {
 
   .sm\:leading-6 {
     line-height: 1.5rem;
-  }
-
-  .sm\:opacity-40 {
-    opacity: 0.4;
   }
 }
 
