--- a/public/css/style.css
+++ b/public/css/style.css
@@ -629,12 +629,24 @@ video {
   left: 0px;
 }
 
-.bottom-0 {
-  bottom: 0px;
+.-bottom-\[150px\] {
+  bottom: -150px;
 }
 
-.right-0 {
-  right: 0px;
+.-left-\[200px\] {
+  left: -200px;
+}
+
+.-right-\[150px\] {
+  right: -150px;
+}
+
+.top-1\/4 {
+  top: 25%;
+}
+
+.left-1\/4 {
+  left: 25%;
 }
 
 .top-2\/4 {
@@ -649,6 +661,10 @@ video {
   left: -1rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .bottom-32 {
   bottom: 8rem;
 }
@@ -661,29 +677,188 @@ video {
   bottom: 1rem;
 }
 
+.-left-1\/4 {
+  left: -25%;
+}
+
+.-left-10 {
+  left: -2.5rem;
+}
+
+.-left-20 {
+  left: -5rem;
+}
+
+.-top-10 {
+  top: -2.5rem;
+}
+
+.-top-20 {
+  top: -5rem;
+}
+
+.-bottom-20 {
+  bottom: -5rem;
+}
+
+.-right-20 {
+  right: -5rem;
+}
+
+.right-20 {
+  right: 5rem;
+}
+
+.-top-1\/4 {
+  top: -25%;
+}
+
+.-top-2\/4 {
+  top: -50%;
+}
+
+.-top-3\/4 {
+  top: -75%;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.-right-10 {
+  right: -2.5rem;
+}
+
+.-right-1\/4 {
+  right: -25%;
+}
+
+.-right-\[200px\] {
+  right: -200px;
+}
+
+.-right-\[100px\] {
+  right: -100px;
+}
+
+.-right-\[140px\] {
+  right: -140px;
+}
+
+.-bottom-2\/4 {
+  bottom: -50%;
+}
+
+.-bottom-0 {
+  bottom: -0px;
+}
+
+.-bottom-1\/4 {
+  bottom: -25%;
+}
+
+.-bottom-\[100px\] {
+  bottom: -100px;
+}
+
+.-top-\[346px\] {
+  top: -346px;
+}
+
+.-bottom-\[200px\] {
+  bottom: -200px;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.-right-\[70px\] {
+  right: -70px;
+}
+
+.-top-\[118px\] {
+  top: -118px;
+}
+
+.-top-\[145px\] {
+  top: -145px;
+}
+
+.top-\[200px\] {
+  top: 200px;
+}
+
+.top-\[100px\] {
+  top: 100px;
+}
+
+.top-\[80px\] {
+  top: 80px;
+}
+
+.bottom-2\/4 {
+  bottom: 50%;
+}
+
+.bottom-1\/4 {
+  bottom: 25%;
+}
+
+.-left-40 {
+  left: -10rem;
+}
+
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.-bottom-10 {
+  bottom: -2.5rem;
+}
+
+.-bottom-40 {
+  bottom: -10rem;
+}
+
+.-bottom-32 {
+  bottom: -8rem;
+}
+
+.-bottom-\[50px\] {
+  bottom: -50px;
+}
+
+.-right-0 {
+  right: -0px;
+}
+
+.-bottom-\[70px\] {
+  bottom: -70px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
 
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-}
-
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+}
+
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 .my-2 {
@@ -696,17 +871,8 @@ video {
   margin-right: 0.625rem;
 }
 
-.my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-2\.5 {
-  margin-bottom: 0.625rem;
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
 .mb-5 {
@@ -717,28 +883,16 @@ video {
   margin-right: 0.5rem;
 }
 
-.mb-20 {
-  margin-bottom: 5rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
-.ml-auto {
-  margin-left: auto;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.ml-28 {
-  margin-left: 7rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mr-28 {
-  margin-right: 7rem;
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .mb-6 {
@@ -761,20 +915,16 @@ video {
   margin-top: 2.5rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .mt-6 {
   margin-top: 1.5rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .mr-3 {
@@ -789,12 +939,8 @@ video {
   margin-right: 1rem;
 }
 
-.mb-14 {
-  margin-bottom: 3.5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .mt-1 {
@@ -805,16 +951,16 @@ video {
   margin-top: 0.5rem;
 }
 
-.mb-16 {
-  margin-bottom: 4rem;
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
-.ml-8 {
-  margin-left: 2rem;
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .block {
@@ -857,60 +1003,12 @@ video {
   height: 100vh;
 }
 
-.h-\[210px\] {
-  height: 210px;
-}
-
-.h-1 {
-  height: 0.25rem;
+.h-\[480px\] {
+  height: 480px;
 }
 
 .h-full {
   height: 100%;
-}
-
-.h-3\/4 {
-  height: 75%;
-}
-
-.h-px {
-  height: 1px;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-11 {
-  height: 2.75rem;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-\[600px\] {
-  height: 600px;
-}
-
-.h-\[550px\] {
-  height: 550px;
-}
-
-.h-\[480px\] {
-  height: 480px;
 }
 
 .h-0\.5 {
@@ -925,32 +1023,60 @@ video {
   height: 200px;
 }
 
-.h-\[4200px\] {
-  height: 4200px;
+.h-\[100px\] {
+  height: 100px;
 }
 
-.h-\[420px\] {
-  height: 420px;
+.h-px {
+  height: 1px;
 }
 
-.h-\[400px\] {
-  height: 400px;
+.h-20 {
+  height: 5rem;
 }
 
-.h-\[360px\] {
-  height: 360px;
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-11 {
+  height: 2.75rem;
+}
+
+.h-\[50px\] {
+  height: 50px;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-\[200px\] {
-  width: 200px;
+.w-\[600px\] {
+  width: 600px;
 }
 
-.w-72 {
-  width: 18rem;
+.w-\[500px\] {
+  width: 500px;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
+.w-2\/4 {
+  width: 50%;
+}
+
+.w-9\/12 {
+  width: 75%;
 }
 
 .w-6\/12 {
@@ -963,6 +1089,10 @@ video {
 
 .w-5\/12 {
   width: 41.666667%;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-20 {
@@ -981,16 +1111,28 @@ video {
   width: 2.75rem;
 }
 
-.w-2\/4 {
-  width: 50%;
+.w-\[400px\] {
+  width: 400px;
 }
 
-.w-9\/12 {
-  width: 75%;
+.w-\[100px\] {
+  width: 100px;
 }
 
-.w-16 {
-  width: 4rem;
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[140px\] {
+  width: 140px;
+}
+
+.w-\[160px\] {
+  width: 160px;
+}
+
+.w-\[180px\] {
+  width: 180px;
 }
 
 .max-w-screen-xl {
@@ -1005,6 +1147,16 @@ video {
   flex-grow: 1;
 }
 
+.-translate-y-1\/4 {
+  --tw-translate-y: -25%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-1\/4 {
+  --tw-translate-x: -25%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .-translate-y-2\/4 {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1012,6 +1164,11 @@ video {
 
 .-translate-x-2\/4 {
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-2\/4 {
+  --tw-translate-y: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1246,16 +1403,12 @@ video {
        columns: 1;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .items-end {
@@ -1288,6 +1441,22 @@ video {
 
 .overflow-auto {
   overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+
+.overflow-y-visible {
+  overflow-y: visible;
 }
 
 .scroll-smooth {
@@ -1381,6 +1550,11 @@ video {
   background-color: rgb(155 96 106 / var(--tw-bg-opacity));
 }
 
+.bg-paper-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 246 246 / var(--tw-bg-opacity));
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -1402,16 +1576,16 @@ video {
      object-fit: cover;
 }
 
-.p-20 {
-  padding: 5rem;
+.p-10 {
+  padding: 2.5rem;
 }
 
 .p-4 {
   padding: 1rem;
 }
 
-.p-10 {
-  padding: 2.5rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
 .p-2\.5 {
@@ -1420,10 +1594,6 @@ video {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
 }
 
 .py-3 {
@@ -1436,54 +1606,14 @@ video {
   padding-right: 1.5rem;
 }
 
-.py-2\.5 {
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-32 {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-}
-
-.py-36 {
-  padding-top: 9rem;
-  padding-bottom: 9rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .py-1 {
@@ -1496,14 +1626,34 @@ video {
   padding-right: 1.25rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .py-14 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .py-1\.5 {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pb-10 {
@@ -1514,12 +1664,28 @@ video {
   padding-right: 1rem;
 }
 
-.text-center {
-  text-align: center;
+.pt-20 {
+  padding-top: 5rem;
 }
 
-.text-right {
-  text-align: right;
+.pt-32 {
+  padding-top: 8rem;
+}
+
+.pt-0 {
+  padding-top: 0px;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .font-belle {
@@ -1563,6 +1729,11 @@ video {
   line-height: 2rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -1581,11 +1752,6 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .font-medium {
@@ -1704,10 +1870,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:visible {
-    visibility: visible;
-  }
-
   .sm\:bottom-28 {
     bottom: 7rem;
   }
@@ -1718,6 +1880,42 @@ video {
 
   .sm\:bottom-6 {
     bottom: 1.5rem;
+  }
+
+  .sm\:-left-20 {
+    left: -5rem;
+  }
+
+  .sm\:-bottom-\[200px\] {
+    bottom: -200px;
+  }
+
+  .sm\:-right-\[140px\] {
+    right: -140px;
+  }
+
+  .sm\:-top-\[346px\] {
+    top: -346px;
+  }
+
+  .sm\:left-1\/4 {
+    left: 25%;
+  }
+
+  .sm\:top-1\/4 {
+    top: 25%;
+  }
+
+  .sm\:-bottom-\[150px\] {
+    bottom: -150px;
+  }
+
+  .sm\:-left-\[200px\] {
+    left: -200px;
+  }
+
+  .sm\:-right-\[150px\] {
+    right: -150px;
   }
 
   .sm\:my-32 {
@@ -1747,6 +1945,10 @@ video {
     margin-bottom: 2.5rem;
   }
 
+  .sm\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
   .sm\:mb-14 {
     margin-bottom: 3.5rem;
   }
@@ -1759,12 +1961,8 @@ video {
     margin-bottom: 0px;
   }
 
-  .sm\:mb-5 {
-    margin-bottom: 1.25rem;
-  }
-
-  .sm\:mb-20 {
-    margin-bottom: 5rem;
+  .sm\:ml-28 {
+    margin-left: 7rem;
   }
 
   .sm\:mb-3 {
@@ -1775,8 +1973,8 @@ video {
     margin-right: 7rem;
   }
 
-  .sm\:ml-28 {
-    margin-left: 7rem;
+  .sm\:mb-5 {
+    margin-bottom: 1.25rem;
   }
 
   .sm\:mb-12 {
@@ -1803,24 +2001,16 @@ video {
     display: none;
   }
 
-  .sm\:h-\[310px\] {
-    height: 310px;
-  }
-
-  .sm\:h-\[750px\] {
-    height: 750px;
-  }
-
   .sm\:h-screen {
     height: 100vh;
   }
 
-  .sm\:h-12 {
-    height: 3rem;
-  }
-
   .sm\:h-1 {
     height: 0.25rem;
+  }
+
+  .sm\:h-\[750px\] {
+    height: 750px;
   }
 
   .sm\:h-\[420px\] {
@@ -1831,28 +2021,16 @@ video {
     height: 500px;
   }
 
-  .sm\:w-\[300px\] {
-    width: 300px;
+  .sm\:h-12 {
+    height: 3rem;
+  }
+
+  .sm\:h-\[100px\] {
+    height: 100px;
   }
 
   .sm\:w-8\/12 {
     width: 66.666667%;
-  }
-
-  .sm\:w-2\/4 {
-    width: 50%;
-  }
-
-  .sm\:w-5\/12 {
-    width: 41.666667%;
-  }
-
-  .sm\:w-28 {
-    width: 7rem;
-  }
-
-  .sm\:w-12 {
-    width: 3rem;
   }
 
   .sm\:w-3\/4 {
@@ -1867,25 +2045,63 @@ video {
     width: 50%;
   }
 
+  .sm\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .sm\:w-28 {
+    width: 7rem;
+  }
+
+  .sm\:w-2\/4 {
+    width: 50%;
+  }
+
+  .sm\:w-12 {
+    width: 3rem;
+  }
+
+  .sm\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .sm\:w-\[300px\] {
+    width: 300px;
+  }
+
+  .sm\:w-\[600px\] {
+    width: 600px;
+  }
+
+  .sm\:w-\[500px\] {
+    width: 500px;
+  }
+
+  .sm\:-translate-x-1\/4 {
+    --tw-translate-x: -25%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .sm\:-translate-y-1\/4 {
+    --tw-translate-y: -25%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .sm\:columns-2 {
     -moz-columns: 2;
          columns: 2;
-  }
-
-  .sm\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .sm\:gap-4 {
-    gap: 1rem;
+  .sm\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .sm\:p-6 {
-    padding: 1.5rem;
+  .sm\:gap-4 {
+    gap: 1rem;
   }
 
   .sm\:p-20 {
@@ -1896,19 +2112,8 @@ video {
     padding: 2.5rem;
   }
 
-  .sm\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-
-  .sm\:py-10 {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-  }
-
-  .sm\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
+  .sm\:p-6 {
+    padding: 1.5rem;
   }
 
   .sm\:px-0 {
@@ -1926,14 +2131,19 @@ video {
     padding-bottom: 0.625rem;
   }
 
+  .sm\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+
   .sm\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
 
-  .sm\:px-7 {
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
+  .sm\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
   }
 
   .sm\:py-32 {
@@ -1944,6 +2154,24 @@ video {
   .sm\:py-36 {
     padding-top: 9rem;
     padding-bottom: 9rem;
+  }
+
+  .sm\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .sm\:py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .sm\:pt-32 {
+    padding-top: 8rem;
+  }
+
+  .sm\:pb-10 {
+    padding-bottom: 2.5rem;
   }
 
   .sm\:text-right {
@@ -1959,14 +2187,14 @@ video {
     font-size: 200px;
   }
 
-  .sm\:text-8xl {
-    font-size: 6rem;
-    line-height: 1;
-  }
-
   .sm\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .sm\:text-xl {
@@ -1974,19 +2202,14 @@ video {
     line-height: 1.75rem;
   }
 
-  .sm\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
   }
 
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .sm\:text-lg {
