--- a/public/css/style.css
+++ b/public/css/style.css
@@ -629,40 +629,100 @@ video {
   left: 0px;
 }
 
-.-bottom-\[150px\] {
-  bottom: -150px;
+.-bottom-32 {
+  bottom: -8rem;
 }
 
-.-left-\[200px\] {
-  left: -200px;
+.-left-40 {
+  left: -10rem;
 }
 
-.-right-\[150px\] {
-  right: -150px;
+.-bottom-\[70px\] {
+  bottom: -70px;
 }
 
-.top-1\/4 {
-  top: 25%;
+.-right-\[70px\] {
+  right: -70px;
 }
 
-.left-1\/4 {
-  left: 25%;
-}
-
-.top-2\/4 {
-  top: 50%;
+.top-\[80px\] {
+  top: 80px;
 }
 
 .left-2\/4 {
   left: 50%;
 }
 
-.-left-4 {
-  left: -1rem;
+.-top-20 {
+  top: -5rem;
+}
+
+.-right-0 {
+  right: -0px;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.top-2\/4 {
+  top: 50%;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.-left-0 {
+  left: -0px;
+}
+
+.-left-10 {
+  left: -2.5rem;
+}
+
+.-bottom-\[100px\] {
+  bottom: -100px;
+}
+
+.-top-\[145px\] {
+  top: -145px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.-bottom-\[72px\] {
+  bottom: -72px;
+}
+
+.-top-\[100px\] {
+  top: -100px;
 }
 
 .bottom-0 {
   bottom: 0px;
+}
+
+.right-1\/4 {
+  right: 25%;
+}
+
+.-bottom-\[63px\] {
+  bottom: -63px;
+}
+
+.-right-\[50px\] {
+  right: -50px;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
+.left-4 {
+  left: 1rem;
 }
 
 .bottom-32 {
@@ -675,170 +735,6 @@ video {
 
 .bottom-4 {
   bottom: 1rem;
-}
-
-.-left-1\/4 {
-  left: -25%;
-}
-
-.-left-10 {
-  left: -2.5rem;
-}
-
-.-left-20 {
-  left: -5rem;
-}
-
-.-top-10 {
-  top: -2.5rem;
-}
-
-.-top-20 {
-  top: -5rem;
-}
-
-.-bottom-20 {
-  bottom: -5rem;
-}
-
-.-right-20 {
-  right: -5rem;
-}
-
-.right-20 {
-  right: 5rem;
-}
-
-.-top-1\/4 {
-  top: -25%;
-}
-
-.-top-2\/4 {
-  top: -50%;
-}
-
-.-top-3\/4 {
-  top: -75%;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.-right-10 {
-  right: -2.5rem;
-}
-
-.-right-1\/4 {
-  right: -25%;
-}
-
-.-right-\[200px\] {
-  right: -200px;
-}
-
-.-right-\[100px\] {
-  right: -100px;
-}
-
-.-right-\[140px\] {
-  right: -140px;
-}
-
-.-bottom-2\/4 {
-  bottom: -50%;
-}
-
-.-bottom-0 {
-  bottom: -0px;
-}
-
-.-bottom-1\/4 {
-  bottom: -25%;
-}
-
-.-bottom-\[100px\] {
-  bottom: -100px;
-}
-
-.-top-\[346px\] {
-  top: -346px;
-}
-
-.-bottom-\[200px\] {
-  bottom: -200px;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
-.-right-\[70px\] {
-  right: -70px;
-}
-
-.-top-\[118px\] {
-  top: -118px;
-}
-
-.-top-\[145px\] {
-  top: -145px;
-}
-
-.top-\[200px\] {
-  top: 200px;
-}
-
-.top-\[100px\] {
-  top: 100px;
-}
-
-.top-\[80px\] {
-  top: 80px;
-}
-
-.bottom-2\/4 {
-  bottom: 50%;
-}
-
-.bottom-1\/4 {
-  bottom: 25%;
-}
-
-.-left-40 {
-  left: -10rem;
-}
-
-.bottom-6 {
-  bottom: 1.5rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.-bottom-10 {
-  bottom: -2.5rem;
-}
-
-.-bottom-40 {
-  bottom: -10rem;
-}
-
-.-bottom-32 {
-  bottom: -8rem;
-}
-
-.-bottom-\[50px\] {
-  bottom: -50px;
-}
-
-.-right-0 {
-  right: -0px;
-}
-
-.-bottom-\[70px\] {
-  bottom: -70px;
 }
 
 .mx-auto {
@@ -1023,8 +919,8 @@ video {
   height: 200px;
 }
 
-.h-\[100px\] {
-  height: 100px;
+.h-\[50px\] {
+  height: 50px;
 }
 
 .h-px {
@@ -1051,24 +947,24 @@ video {
   height: 2.75rem;
 }
 
-.h-\[50px\] {
-  height: 50px;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-\[600px\] {
-  width: 600px;
-}
-
-.w-\[500px\] {
-  width: 500px;
-}
-
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[160px\] {
+  width: 160px;
+}
+
+.w-\[100px\] {
+  width: 100px;
 }
 
 .w-2\/4 {
@@ -1077,6 +973,10 @@ video {
 
 .w-9\/12 {
   width: 75%;
+}
+
+.w-\[50px\] {
+  width: 50px;
 }
 
 .w-6\/12 {
@@ -1091,12 +991,24 @@ video {
   width: 41.666667%;
 }
 
+.w-\[180px\] {
+  width: 180px;
+}
+
 .w-16 {
   width: 4rem;
 }
 
+.w-\[80px\] {
+  width: 80px;
+}
+
 .w-20 {
   width: 5rem;
+}
+
+.w-\[120px\] {
+  width: 120px;
 }
 
 .w-24 {
@@ -1111,30 +1023,6 @@ video {
   width: 2.75rem;
 }
 
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[100px\] {
-  width: 100px;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[140px\] {
-  width: 140px;
-}
-
-.w-\[160px\] {
-  width: 160px;
-}
-
-.w-\[180px\] {
-  width: 180px;
-}
-
 .max-w-screen-xl {
   max-width: 1280px;
 }
@@ -1147,28 +1035,13 @@ video {
   flex-grow: 1;
 }
 
-.-translate-y-1\/4 {
-  --tw-translate-y: -25%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-1\/4 {
-  --tw-translate-x: -25%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-2\/4 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .-translate-x-2\/4 {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-2\/4 {
-  --tw-translate-y: 50%;
+.-translate-y-2\/4 {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1184,6 +1057,11 @@ video {
 
 .-scale-y-100 {
   --tw-scale-y: -1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-scale-x-100 {
+  --tw-scale-x: -1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1447,18 +1325,6 @@ video {
   overflow: hidden;
 }
 
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-
-.overflow-y-hidden {
-  overflow-y: hidden;
-}
-
-.overflow-y-visible {
-  overflow-y: visible;
-}
-
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -1505,6 +1371,11 @@ video {
   border-color: rgb(163 163 163 / var(--tw-border-opacity));
 }
 
+.bg-oldGreen-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(169 160 88 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1530,6 +1401,11 @@ video {
   background-color: rgb(248 245 232 / var(--tw-bg-opacity));
 }
 
+.bg-paper-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 246 246 / var(--tw-bg-opacity));
+}
+
 .bg-oldGreen-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(84 80 43 / var(--tw-bg-opacity));
@@ -1550,9 +1426,9 @@ video {
   background-color: rgb(155 96 106 / var(--tw-bg-opacity));
 }
 
-.bg-paper-100 {
+.bg-cream-50 {
   --tw-bg-opacity: 1;
-  background-color: rgb(246 246 246 / var(--tw-bg-opacity));
+  background-color: rgb(234 227 219 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -1660,24 +1536,16 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.pr-4 {
-  padding-right: 1rem;
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 
 .pt-20 {
   padding-top: 5rem;
 }
 
-.pt-32 {
-  padding-top: 8rem;
-}
-
-.pt-0 {
-  padding-top: 0px;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .pt-10 {
@@ -1804,6 +1672,11 @@ video {
   color: rgb(82 82 82 / var(--tw-text-opacity));
 }
 
+.text-cream-50 {
+  --tw-text-opacity: 1;
+  color: rgb(234 227 219 / var(--tw-text-opacity));
+}
+
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1870,16 +1743,48 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:bottom-28 {
-    bottom: 7rem;
+  .sm\:-bottom-\[150px\] {
+    bottom: -150px;
   }
 
-  .sm\:right-10 {
-    right: 2.5rem;
+  .sm\:-left-\[200px\] {
+    left: -200px;
   }
 
-  .sm\:bottom-6 {
-    bottom: 1.5rem;
+  .sm\:-right-\[150px\] {
+    right: -150px;
+  }
+
+  .sm\:top-1\/4 {
+    top: 25%;
+  }
+
+  .sm\:left-1\/4 {
+    left: 25%;
+  }
+
+  .sm\:top-10 {
+    top: 2.5rem;
+  }
+
+  .sm\:-right-20 {
+    right: -5rem;
+  }
+
+  .sm\:top-32 {
+    top: 8rem;
+  }
+
+  .sm\:right-48 {
+    right: 12rem;
+  }
+
+  .sm\:top-6 {
+    top: 1.5rem;
+  }
+
+  .sm\:left-0 {
+    left: 0px;
   }
 
   .sm\:-left-20 {
@@ -1898,24 +1803,36 @@ video {
     top: -346px;
   }
 
-  .sm\:left-1\/4 {
-    left: 25%;
+  .sm\:-top-\[231px\] {
+    top: -231px;
   }
 
-  .sm\:top-1\/4 {
-    top: 25%;
+  .sm\:left-2\/4 {
+    left: 50%;
   }
 
-  .sm\:-bottom-\[150px\] {
-    bottom: -150px;
+  .sm\:top-0 {
+    top: 0px;
   }
 
-  .sm\:-left-\[200px\] {
-    left: -200px;
+  .sm\:left-10 {
+    left: 2.5rem;
   }
 
-  .sm\:-right-\[150px\] {
-    right: -150px;
+  .sm\:-top-\[264px\] {
+    top: -264px;
+  }
+
+  .sm\:bottom-28 {
+    bottom: 7rem;
+  }
+
+  .sm\:right-10 {
+    right: 2.5rem;
+  }
+
+  .sm\:bottom-6 {
+    bottom: 1.5rem;
   }
 
   .sm\:my-32 {
@@ -1989,6 +1906,14 @@ video {
     margin-bottom: 1rem;
   }
 
+  .sm\:mt-32 {
+    margin-top: 8rem;
+  }
+
+  .sm\:mt-28 {
+    margin-top: 7rem;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -2017,56 +1942,24 @@ video {
     height: 420px;
   }
 
-  .sm\:h-\[500px\] {
-    height: 500px;
-  }
-
-  .sm\:h-12 {
-    height: 3rem;
-  }
-
   .sm\:h-\[100px\] {
     height: 100px;
   }
 
-  .sm\:w-8\/12 {
-    width: 66.666667%;
+  .sm\:h-\[500px\] {
+    height: 500px;
   }
 
-  .sm\:w-3\/4 {
-    width: 75%;
+  .sm\:h-16 {
+    height: 4rem;
   }
 
-  .sm\:w-72 {
-    width: 18rem;
+  .sm\:h-20 {
+    height: 5rem;
   }
 
-  .sm\:w-6\/12 {
-    width: 50%;
-  }
-
-  .sm\:w-5\/12 {
-    width: 41.666667%;
-  }
-
-  .sm\:w-28 {
-    width: 7rem;
-  }
-
-  .sm\:w-2\/4 {
-    width: 50%;
-  }
-
-  .sm\:w-12 {
-    width: 3rem;
-  }
-
-  .sm\:w-\[400px\] {
-    width: 400px;
-  }
-
-  .sm\:w-\[300px\] {
-    width: 300px;
+  .sm\:h-14 {
+    height: 3.5rem;
   }
 
   .sm\:w-\[600px\] {
@@ -2077,13 +1970,82 @@ video {
     width: 500px;
   }
 
+  .sm\:w-\[240px\] {
+    width: 240px;
+  }
+
+  .sm\:w-8\/12 {
+    width: 66.666667%;
+  }
+
+  .sm\:w-3\/4 {
+    width: 75%;
+  }
+
+  .sm\:w-\[200px\] {
+    width: 200px;
+  }
+
+  .sm\:w-72 {
+    width: 18rem;
+  }
+
+  .sm\:w-6\/12 {
+    width: 50%;
+  }
+
+  .sm\:w-\[100px\] {
+    width: 100px;
+  }
+
+  .sm\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .sm\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .sm\:w-28 {
+    width: 7rem;
+  }
+
+  .sm\:w-\[160px\] {
+    width: 160px;
+  }
+
+  .sm\:w-\[340px\] {
+    width: 340px;
+  }
+
+  .sm\:w-2\/4 {
+    width: 50%;
+  }
+
+  .sm\:w-16 {
+    width: 4rem;
+  }
+
+  .sm\:w-20 {
+    width: 5rem;
+  }
+
+  .sm\:w-14 {
+    width: 3.5rem;
+  }
+
+  .sm\:-translate-y-1\/4 {
+    --tw-translate-y: -25%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .sm\:-translate-x-1\/4 {
     --tw-translate-x: -25%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .sm\:-translate-y-1\/4 {
-    --tw-translate-y: -25%;
+  .sm\:-translate-x-2\/4 {
+    --tw-translate-x: -50%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -2156,22 +2118,22 @@ video {
     padding-bottom: 9rem;
   }
 
-  .sm\:py-10 {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-  }
-
   .sm\:py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
   }
 
-  .sm\:pt-32 {
-    padding-top: 8rem;
+  .sm\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
   }
 
   .sm\:pb-10 {
     padding-bottom: 2.5rem;
+  }
+
+  .sm\:pt-32 {
+    padding-top: 8rem;
   }
 
   .sm\:text-right {
@@ -2215,6 +2177,11 @@ video {
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .sm\:leading-10 {
